Fix word wrap in articles summary.

--- a/themes/indigo/source/css/_partial/archives.less
+++ b/themes/indigo/source/css/_partial/archives.less
@@ -14,8 +14,6 @@
     .card();
 
     .post-content {
-        word-break: break-all;
-
         .highlight,
         > pre {
             margin-left: -20px;
